fix to ios horizontal scroll lag

--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -662,6 +662,7 @@ ul {
   display: -ms-flexbox;
   display: flex;
   overflow-x: auto;
+  -webkit-overflow-scrolling: touch;
   padding: 2rem; }
   .catalog-index h2 {
     margin: 2rem 0; }
